--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=hasmail
 pkgver=20130604
-pkgrel=2
+pkgrel=3
 pkgdesc="System tray application that checks for and notifies about new mail"
 arch=('x86_64' 'i686')
 url="http://github.com/Jonhoo/hasmail"
@@ -10,7 +10,7 @@ license=('BSD')
 depends=('gtk2')
 makedepends=('go' 'git')
 options=('!strip' '!emptydirs')
-_gourl=github.com/Jonhoo/hasmail
+_gourl=github.com/jonhoo/hasmail
 
 build() {
   cd "$srcdir"
