Add dependencies on notification packages.
Fixes #6.

--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -2,12 +2,12 @@
 
 pkgname=hasmail
 pkgver=20130604
-pkgrel=4
+pkgrel=5
 pkgdesc="System tray application that checks for and notifies about new mail"
 arch=('x86_64' 'i686')
 url="http://github.com/Jonhoo/hasmail"
 license=('BSD')
-depends=('gtk2')
+depends=('gtk2' 'libnotify' 'notify-osd')
 makedepends=('go' 'git' 'mercurial')
 options=('!strip' '!emptydirs')
 _gourl=github.com/jonhoo/hasmail
