--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "packages/arch-linux"]
 	path = packages/arch-linux
-	url = https://aur4.archlinux.org/hasmail.git
+	url = https://aur.archlinux.org/hasmail.git
